# joduga

./: .gitignore  CMakeLists.txt  Cargo.toml  DELIVERY_REPORT.md  DESIGN.md  DOCS_INDEX.md  LICENSE  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  clippy.toml  feedback.py  verify_build.sh
.agent/: bootstrap.md  loop_log.md  next.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  nightly.yml  release.yml
cmake-build/: libjoduga_audio.so.0  libjoduga_audio.so.0.1.0
cpp/include/: audio_engine.h  audio_node.h
cpp/include/nodes/: delay.h  effects.h  filter.h  gain.h  oscillator.h  reverb.h
cpp/include/platform/: rt_platform.h
cpp/src/: audio_engine.cpp  audio_node.cpp
cpp/src/nodes/: delay.cpp  effects.cpp  filter.cpp  gain.cpp  oscillator.cpp  reverb.cpp
cpp/src/platform/: linux_rt.cpp  macos_rt.cpp  windows_rt.cpp
rust/: Cargo.toml  build.rs
rust/examples/: bench_queue.rs
rust/src/: audio_engine_wrapper.rs  ffi.rs  lib.rs  lockfree_queue.rs  main.rs  midi_input.rs  param_hash.rs  shadow_graph.rs  ui_main.rs
rust/tests/: engine_smoke.rs
tauri-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-ui/src/: App.tsx  AudioNode.tsx  catalog.ts  store.ts  styles.css  types.ts
tauri-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-ui/src-tauri/capabilities/: default.json
tauri-ui/src-tauri/icons/: icon.icns
tauri-ui/src-tauri/src/: main.rs
