[package]
name = "joduga"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "joduga"
path = "src/main.rs"

[dependencies]
tauri = { version = "2" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
crossbeam = "0.8"
midir = "0.9"
libc = "0.2"

# Build dependencies
[build-dependencies]
cmake = "0.1"

