[package]
name = "joduga"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "joduga"
path = "src/main.rs"

[[bin]]
name = "joduga-ui"
path = "src/ui_main.rs"
required-features = ["egui-ui"]

[features]
default = ["egui-ui"]
egui-ui = ["eframe", "egui", "egui_plot"]

[dependencies]
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }
egui_plot = { version = "0.31", optional = true }
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = "0.9"

# Build dependencies
[build-dependencies]
cmake = "0.1"

